--- a/config/waybar/config
+++ b/config/waybar/config
@@ -2,14 +2,14 @@
 
     "height": 30, // Waybar height (to be removed for auto height)
     "layer": "top", // Waybar at top layer
-    "margin-top": 6,
+    "margin-top": 5,
     "margin-left": 10,
-    "margin-bottom": 0,
+    "margin-bottom": 10,
     "margin-right": 10,
-    "spacing": 5, // Gaps between modules (4px)
-    "modules-left": ["custom/launcher", "cpu", "memory", "hyprland/workspaces", "custom/weather", "user"],
-    "modules-center": ["clock","custom/chatgpt","custom/updates"],
-    "modules-right": ["tray","custom/kbd_backlight","custom/hyprshade", "backlight", "pulseaudio", "network", "battery", "custom/power-menu"],
+    "spacing": 0, // Gaps between modules (4px)
+    "modules-left": ["custom/launcher", "cpu", "memory", "hyprland/workspaces", "custom/weather", "user","disk"],
+    "modules-center": ["clock","custom/chatgpt","custom/deepseek","custom/updates"],
+    "modules-right": ["custom/whatapps","custom/reddit","custom/discord","custom/kbd_backlight","custom/hyprshade", "backlight", "pulseaudio", "network", "battery", "custom/power-menu"],
     "hyprland/workspaces": {
       "format": "{icon}",
       "on-click": "activate",
@@ -28,24 +28,21 @@
         "format": "{}"
     },
     "tray": {
-        "spacing": 10
     },
     "clock": {
-        "format": "{:%a %b %d}",
+        "format": " {:%a %b %d}",
         "format-alt": " {:%I:%M %p}",
         "tooltip-format": "<big>{:%B %Y}</big>\n<tt><small>{calendar}</small></tt>",
     },
     "cpu": {
       "interval": 10,
       "format": " {}%",
-      "max-length": 10,
       "on-click": "",
     },
     "memory": {
         "interval": 30,
         "format": " {}%",
         "format-alt":" {used:0.1f}G",
-        "max-length": 10,
     },
     "backlight": {
         "device": "DP-1",
@@ -86,8 +83,9 @@
 
     "battery": {
       "bat": "BAT0",
+      "bat1": "BAT1",
       "adapter": "ADP0",
-      "interval": 60,
+      "interval": 5,
       "states": {
           "warning": 30,
           "critical": 15
@@ -111,17 +109,36 @@
 
    "custom/chatgpt": {
     "exec": "echo 'Open ChatGPT'",
-    "format": "ChatGPT",
+    "format": " ChatGPT",
     "on-click": "python3 ~/.config/waybar/scripts/chatgpt.py",
+    },
+    "custom/deepseek": {
+    "exec": "echo 'DeepSeek'",
+    "format": " Deepseek",
+    "on-click": "python3 ~/.config/waybar/scripts/deepseek.py",
+    },
+    "custom/whatapps": {
+    "exec": "echo 'Whatapps'",
+    "format": " ",
+    "on-click": "python3 ~/.config/waybar/scripts/wa.py",
+    },
+    "custom/reddit": {
+    "exec": "echo 'Reddit'",
+    "format": " ",
+    "on-click": "python3 ~/.config/waybar/scripts/reddit.py",
     },
     "custom/power-menu": {
     "on-click": "sleep 0.1 && ~/.config/ml4w/settings/ml4w-sidebar.sh",
     "on-click-right": "sleep 0.1 && com.ml4w.welcome",
-    "format": "",
+    "format": " ",
     "tooltip-format": "Menu"
     },
     "user": {
         "format": " {user}"
+    },
+    "uptime": {
+    "format": "{days}d {hours}h {minutes}m {seconds}s",
+    "interval": 1
     },
     "custom/cliphist": {
     "format": " ^c ",
@@ -145,12 +162,25 @@
     "on-click": "$(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e ~/.config/ml4w/scripts/installupdates.sh",
     "on-click-right": "~/.config/ml4w/settings/software.sh"
     },
+    "custom/wvkbd": {
+    "format": "⌨️",
+    "on-click": "~/.config/hypr/toggle-wvkbd.sh"
+    },
     "custom/kbd_backlight": {
      "exec": "cat /sys/class/leds/tpacpi::kbd_backlight/brightness",
      "interval": 1,
      "format": " Keyboard {}",
      "on-click": "~/.config/waybar/scripts/keyboardbacklight.sh"
     },
+    "custom/discord": {
+    "format": " ",
+    "on-click": "~/.config/hypr/discord.py"
+    },
+    "disk": {
+    "path": "/",
+    "interval": 60,
+    "format": "  {used}/{total}",
+   },
 
     "custom/launcher": {
         "format": " ",
